--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "framer-motion": "^10.16.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "resend": "^4.6.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
