--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.31.0",
     "resend": "^4.6.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
@@ -33,6 +35,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.0",
